--- a/PushUp1.0/nbproject/project.properties
+++ b/PushUp1.0/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pushup1.pkg0.PushUp10
+main.class=Client.RunClient
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
