--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /PushUp1.0/nbproject/private/
 /PushUp1.0/build/
 /FacePull/nbproject/private/
+/test/nbproject/private/
+/test/build/
+/FTPtest/nbproject/private/
+/FTPtest/build/
